--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               colors: {
                 clifford: '#da373d',
                 'bike-primary': '#E76F51',
+                'banner-primary-bg': 'rgba(231, 111, 81, 0.10)',
               }
             }
           }
@@ -32,7 +33,8 @@
     </style>
 </head>
 <body class="font-poppins">
-    <header class="lg:w-5/6 m-auto mt-4">
+    <!-- Nav bar -->
+    <header class="container mx-auto mb-8">
         <nav>
             <div class="navbar bg-base-100">
                 <div class="flex-1">
@@ -47,7 +49,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-4xl font-bold">Bike Dekho</a>
+                    <a class="text-4xl font-bold">Bike Dekho</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu text-base menu-horizontal px-1">
@@ -58,13 +60,105 @@
                     </ul>
                 </div>
                 <div>
-                    <a class="btn text-white bg-bike-primary px-12 py-4">Login</a>
+                    <a class="btn text-white bg-bike-primary lg:px-12 lg:py-4">Login</a>
                 </div>
             </div>
         </nav>
+        <!-- Banner -->
+        <!-- <div class="carousel lg:h-[550px]">
+            <div id="slide1" class="carousel-item bg-banner-primary-bg rounded-lg relative w-full">
+                <div class="flex flex-auto gap-12 items-center lg:p-24">
+                    <div class="space-y-7 lg:w-[440px] flex-1">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                        <p>Amet minim mollit non deserunt ullamco sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1 items-center">
+                        <img src="images/slider/bike1.png" class=" w-3/4"/>
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+          </div> -->
+          <div class="bg-banner-primary-bg ">
+            <div class="carousel w-full lg:h-[550px] rounded-lg">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row flex-auto gap-12 items-center lg:p-24">
+                        <div class="space-y-7 lg:w-[440px] flex-1">
+                            <h1 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        </div>
+                        <div class="flex-1 items-center">
+                            <img src="images/slider/bike1.png" class=" w-3/4"/>
+                        </div>
+                    </div>
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row flex-auto gap-12 items-center lg:p-24">
+                        <div class="space-y-7 lg:w-[440px] flex-1">
+                            <h1 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        </div>
+                        <div class="flex-1 items-center">
+                            <img src="images/slider/bike2.png" class=" w-3/4"/>
+                        </div>
+                    </div>
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a> 
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row flex-auto gap-12 items-center lg:p-24">
+                        <div class="space-y-7 lg:w-[440px] flex-1">
+                            <h1 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        </div>
+                        <div class="flex-1 items-center">
+                            <img src="images/slider/bike3.png" class=" w-3/4"/>
+                        </div>
+                    </div>
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a> 
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+                <div id="slide4" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row flex-auto gap-12 items-center lg:p-24">
+                        <div class="space-y-7 lg:w-[440px] flex-1">
+                            <h1 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p>Amet minim mollit non deserunt ullamco sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        </div>
+                        <div class="flex-1 items-center">
+                            <img src="images/slider/bike4.png" class=" w-3/4"/>
+                        </div>
+                    </div>
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a> 
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+
+
+
+          
     </header>
     <main>
-
+        
     </main>
     <footer>
 
